--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,3 +1,32 @@
 body {
-  
+  min-height: 100vh;
+  @extend %dmsans-400;
+  font-size: 16px;
+  font-style: normal;
+  line-height: 1.3;
+  color: $default-color;
+  background-color: #fff;
+}
+
+.container {
+  max-width: 1800px;
+  margin: 0 auto;
+  padding: 0 15px;  
+}
+
+.container-1200 {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0)
 }
