--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,9 +1,338 @@
 @import 'vars';
-@import 'fonts';
 @import 'reset';
 @import 'global';
+@import 'fonts';
 
+.header {
+  padding: 47px 0;
+}
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &__list {
+    display: flex;
+    padding-left: 150px;
+  }
+
+  &__item {
+    &:not(:last-child) {
+      margin-right: 35px;
+    }
+  }
+
+  &__link {
+    @extend %rubik-600;
+    font-size: 15px;
+    color: $accent-color;
+    transition: color 0.3s;
+
+    &:hover,
+    &:active,
+    &:focus {
+      color: $primary-color;
+    }
+  }
+}
+
+.usernav {
+  display: flex;
+
+  &__search {
+    position: relative;
+    display: block;
+    width: 51px;
+    height: 51px;
+    margin-right: 21px;
+    background-color: rgba(#a3bbc8, 0.2);
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 17px;
+      left: 17px;
+      width: 16px;
+      height: 16px;
+      background-image: url('../images/icons/search-icon.svg');
+      @extend %bg-set;
+      transition: transform 0.3s;
+    }
+
+    &:hover::before {
+      transform: scale(1.5);
+    }
+  }
+
+  &__favorites {
+    position: relative;
+    display: block;
+    width: 89px;
+    height: 51px;
+    font-size: 0;
+    background-color: $primary-color;
+    border-radius: 25px 0 0 25px;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 17px;
+      left: 41px;
+      width: 18px;
+      height: 17px;
+      background-image: url('../images/icons/heart-icon.svg');
+      @extend %bg-set;
+      transition: transform 0.3s;
+    }
+
+    &:hover::before {
+      transform: scale(1.5);
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 10px;
+      right: 0;
+      width: 1px;
+      height: 32px;
+      background-color: rgba(#fff, 0.5);
+    }
+  }
+
+  &__cart {
+    position: relative;
+    display: block;
+    width: 89px;
+    height: 51px;
+    margin-right: 18px;
+    font-size: 0;
+    background-color: $primary-color;
+    border-radius: 0 25px 25px 0;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 17px;
+      right: 41px;
+      width: 19px;
+      height: 17px;
+      background-image: url('../images/icons/cart-icon.svg');
+      @extend %bg-set;
+      transition: transform 0.3s;
+    }
+
+    &:hover::before {
+      transform: scale(1.5);
+    }
+  }
+
+  &__dots {
+    position: relative;
+    display: block;
+    width: 51px;
+    height: 51px;
+    font-size: 0;
+    background-color: #a3bbc8;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 15px;
+      left: 15px;
+      width: 20px;
+      height: 21px;
+      background-image: url('../images/icons/dots-icon.svg');
+      @extend %bg-set;
+      transition: transform 0.3s;
+    }
+
+    &:hover::before {
+      transform: scale(1.3);
+    }
+  }
+
+  &__num {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    display: block;
+    width: 16px;
+    height: 16px;
+    font-size: 10px;
+    text-align: center;
+    line-height: 1.5;
+    background-color: #fff;
+    border-radius: 50%;
+  }
+
+  &__circle {
+    right: 35px;
+  }
+}
+
+// FOOTER
+
+.footer {
+  padding-top: 80px;
+
+  &__inner {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 80px;
+    border-bottom: 1px solid #dae4e9;
+  }
+
+  &__logo {
+    margin-bottom: 23px;
+  }
+
+  &__item {
+    width: 277px;
+  }
+
+  &__text {
+    margin-bottom: 35px;
+  }
+
+  &__address,
+  &__phone,
+  &__mail, 
+  &__link,
+  &__text,
+  &__page,
+  &__copy {
+    font-size: 14px;
+    font-style: normal;
+    color: #7b7b7b;
+    @extend %rubik-400;
+  }
+
+  &__address,
+  &__phone,
+  &__mail {
+    display: block;
+    margin-bottom: 15px;
+    max-width: 210px;
+    transition: color 0.3s;
+
+    &:focus,
+    &:active,
+    &:hover {
+      color: $primary-color;
+    }
+  }
+
+  &__address,
+  &__text {
+    line-height: 1.7;
+  }
+
+  &__phone,
+  &__mail span,
+  &__address span {
+    text-transform: uppercase;
+  }
+
+  &__title {
+    display: block;
+    margin-bottom: 16px;
+    padding-top: 16px;
+    @extend %dmsans-700;
+    text-transform: uppercase;
+    color: #1f2044;
+  }
+
+  &__string {
+    margin-bottom: 13px;
+  }
+
+  &__link,
+  &__page {
+    transition: color 0.3s;
+
+    &:focus,
+    &:active,
+    &:hover {
+      color: $primary-color;
+    }
+  }
+
+  &__form {
+    display: flex;
+    align-items: center;
+  }
+
+  &__input {
+    width: 170px;
+    height: 40px;
+    border: none;
+    background-color: #fef7f0;
+    outline-color: $primary-color;
+    transition: background-color 0.5s;
+
+    &::placeholder {
+      padding: 0 0 15px 16px;
+      font-size: 12px;
+      color: #234969;
+    }
+
+    &:focus,
+    &:active,
+    &:hover {
+      background-color: $primary-color;
+    }
+  }
+
+  &__btn  {
+    width: 100px;
+    height: 40px;
+    padding: 0;
+    color: #fff;
+    border: none;
+    background-color: #a3bbc8;
+    cursor: pointer;
+    outline-color: $accent-color;
+    transition: background-color 0.5s;
+
+    &:focus,
+    &:active,
+    &:hover {
+      background-color: $accent-color;
+    }
+  }
+
+  &__copyright {
+    display: flex;
+    justify-content: space-between;
+    padding: 40px 0;
+  }
+
+  &__menu {
+    display: flex; 
+  }
+
+  &__items {
+    padding: 0 15px;
+
+    &:not(:last-child) {
+      border-right: 1px solid #7b7b7b;
+    }
+    
+    &:last-child {
+      padding-right: 0;
+    }
+  }  
+}
 
 
 
 @import 'media';
+
