--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,6 +1,8 @@
 $default-color: #262626;
 $accent-color: #436372;
 $primary-color: #fcd7b6;
+$bg-color: #a3bbc8;
+$text-color: #243f4d;
 
 %bg-set { 
   background-position: top center;
