--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -30,3 +30,10 @@ body {
   border: 0;
   clip: rect(0 0 0 0)
 }
+
+.title {
+  @extend %dmsans-700;
+  font-size: 36px;
+  color: #191919;
+  text-align: center;
+}
