--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -12,5 +12,6 @@
 @import 'components/home/video';
 @import 'components/home/blog-news';
 @import 'components/home/clients';
+@import 'components/home/lighting';
 
 
