--- a/app/scss/components/home/_top-slider.scss
+++ b/app/scss/components/home/_top-slider.scss
@@ -4,8 +4,6 @@
     background-color: $primary-color;
   }
 
-  // Ниже в 'box' идет height: 76vh; ты спрашивал зачем это если он растягивается на высоту контейнера, он не растягивался на всю высоту, а всего лишь по контенту, в общем и я сделал таким образом. Там проблема в том что контент не вставал с помощью флексов как надо. А марджины схлапывались, не мог им задать auto. Как смог в общем
-
   &__box {
     position: relative;
     height: 76vh;
@@ -28,21 +26,19 @@
 
   &__text {
     position: absolute;
-    top: 34vh;
+    top: 35vh;
     left: 0;
     max-width: 420px;
     transform: translateY(-50%);
   }
 
-  // Ниже у img фиксированные размеры, я писал тебе на эту тему ты сказал это норм, но я не понимаю когда я могу фиксировать их, а когда не могу. Как разобраться с этой темой ?
-
   &__img {
     position: absolute;
     top: 50%;
     right: 0;
-    width: 640px;
-    height: 264px;
-    object-fit: cover;
+    max-width: 640px;
+    max-height: 264px;
+    object-fit: contain;
     transform: translateY(-50%);
   }
 
@@ -57,37 +53,25 @@
   }
 
   &__descr {
-    @include line-clamp (2);
+    @include line-clamp (3);
     max-width: 360px;
-    margin-bottom: 60px;
+    margin-bottom: 45px;
     @extend %rubik-400;
     font-size: 18px;
     color: $text-color;
   }
 
   &__btn {
-    position: relative;
     padding: 20px 100px 20px 28px;
-    @extend %rubik-500;
-    font-size: 15px;
     color: #fff;
-    outline: transparent;
     background-color: $bg-color;
-    transition: background-color 0.3s;
-
-    &:hover {
-      background-color: $accent-color;
-    }
+    border: none;
+    border-radius: 0;
 
     &::before {
-      content: '';
-      position: absolute;
       top: 27px;
       right: 20px;
-      width: 22px;
-      height: 9px;
       background-image: url('../images/icons/arrow-right.svg');
-      @include bg-set (top center, contain);
     }
   }
 
@@ -111,9 +95,17 @@
       cursor: pointer;
       transition: background-color 0.3s;
 
-      &:hover {
-        background-color: #fff;
+      &:focus {
+        background-color: $focus-color;
       }
+
+      &:hover {
+        background-color: $hover-color;
+      }
+
+       &:active {
+         background-color: $active-color;
+       }
     }
 
     & li:not(:last-child) {
@@ -124,8 +116,6 @@
   .slick-dots .slick-active button {
     background-color: #fff;
   }
-
-  // Ниже вопрос был по slick-track, проблема с ним следующая, если я не задаю ему высоту 76vh, то между слайдером и advantages (блоком прям под ним) появляется полосы в 1-2 пикселя, то есть он на один два пикселя больше чем весь слайдер, я не знаю почему так, но когда я задаю ему высоту все решается
 
   .slick-track {
     height: 76vh;
