--- a/app/scss/layout/_footer.scss
+++ b/app/scss/layout/_footer.scss
@@ -17,10 +17,7 @@
     &--sm {
       max-width: 270px;
     }
-
-    &--self {
-      padding-top: -20px;
-    }
+    // Здесь мог быть отрицательный паддинг )). Он попал сюда случайно и не на что невлиял, я эксперементировал и забыл убрать
   }
 
   &__logo {
@@ -39,7 +36,11 @@
     transition: color 0.3s;
 
     &:hover {
-      color: $primary-color;
+      color: $hover-color;
+    }
+
+    &:active {
+      color: $active-color;
     }
   }
 
@@ -58,6 +59,7 @@
   &__text {
     line-height: 1.7;
     margin-bottom: 30px;
+    @include line-clamp (2);
   }
 
   &__form {
@@ -68,23 +70,28 @@
   &__input {
     width: 170px;
     height: 40px;
+    padding-left: 15px;
     border: none;
     background-color: #fef7f0;
-    outline-color: $primary-color;
+    outline-color: $focus-color;
     transition: background-color 0.5s;
 
     &::placeholder {
-      padding: 0 0 15px 16px;
+      
       font-size: 12px;
       color: #234969;
     }
 
     &:focus {
-      background-color: $primary-color;
+      background-color: $focus-color;
     }
 
     &:hover {
-      background-color: $primary-color;
+      background-color: $hover-color;
+    }
+
+    &:active {
+      background-color: $active-color;;
     }
   }
 
@@ -98,11 +105,15 @@
     transition: background-color 0.5s;
 
     &:focus {
-      background-color: $accent-color;
+      background-color: $focus-color;
     }
 
     &:hover {
-      background-color: $accent-color;
+      background-color: $hover-color;
+    }
+
+    &:active {
+      background-color: $active-color;
     }
   }
 
@@ -131,7 +142,11 @@
       transition: color 0.3s;
 
       &:hover {
-        color: $primary-color;
+        color: $hover-color;
+      }
+
+      &:active {
+        background-color: $active-color;
       }
     }
   }
