--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -5,7 +5,18 @@
 .logo__img {
   width: 146px;
   height: 39px;
-  object-fit: cover;
+  object-fit: contain;
+}
+
+.btn-circle {
+  display: block;
+  width: 51px;
+  height: 51px;
+  border: none;
+  border-radius: 50%;
+  background-color: #fff;
+  cursor: pointer;
+  outline: transparent;
 }
 
 .menu {
@@ -30,11 +41,11 @@
     transition: color 0.3s;
 
     &:hover {
-      color: $primary-color;
+      color: $hover-color;
     }
 
     &:active {
-      color: $primary-color;
+      color: $active-color;
     }
   }
 }
@@ -44,22 +55,21 @@
 
   &__search {
     position: relative;
-    display: block;
-    width: 51px;
-    height: 51px;
     margin-right: 21px;
     background-color: rgba($bg-color, 0.2);
-    border-radius: 50%;
-    border: none;
-    cursor: pointer;
+    transition: background-color 0.3s;
 
-    // Ниже я оставил иконки которые были в header вставленными через background, но после header уже старался везде применить спрайты
+    &:focus {
+      background-color: $focus-color;
+    }
+
+    &:active {
+      background-color: $active-color;
+    }
 
     &::before {
-      content: '';
-      position: absolute;
-      top: 17px;
-      left: 17px;
+      @include pseudo-element (17px);
+      right: 17px;
       width: 16px;
       height: 16px;
       background-image: url('../images/icons/search-icon.svg');
@@ -74,17 +84,19 @@
 
   &__favorites {
     position: relative;
-    display: block;
     width: 89px;
     height: 51px;
     font-size: 0;
     background-color: $primary-color;
     border-radius: 25px 0 0 25px;
+    transition: background-color 0.3s;
+
+    &:active {
+      background-color: $active-color;
+    }
 
     &::before {
-      content: '';
-      position: absolute;
-      top: 22px;
+      @include pseudo-element (22px);
       left: 41px;
       width: 18px;
       height: 17px;
@@ -98,9 +110,7 @@
     }
 
     &::after {
-      content: '';
-      position: absolute;
-      top: 10px;
+      @include pseudo-element (10px);
       right: 0;
       width: 1px;
       height: 32px;
@@ -110,18 +120,20 @@
 
   &__cart {
     position: relative;
-    display: block;
     width: 89px;
     height: 51px;
     margin-right: 18px;
     font-size: 0;
     background-color: $primary-color;
     border-radius: 0 25px 25px 0;
+    transition: background-color 0.3s;
+
+    &:active {
+      background-color: $active-color;
+    }
 
     &::before {
-      content: '';
-      position: absolute;
-      top: 22px;
+      @include pseudo-element (22px);
       right: 41px;
       width: 19px;
       height: 17px;
@@ -137,19 +149,20 @@
 
   &__dots {
     position: relative;
-    display: block;
-    width: 51px;
-    height: 51px;
     font-size: 0;
     background-color: $bg-color;
-    border-radius: 50%;
-    border: none;
-    cursor: pointer;
+    transition: background-color 0.3s;
+
+    &:focus {
+      background-color: $focus-color;
+    }
+
+    &:active {
+      background-color: $active-color;
+    }
 
     &::before {
-      content: '';
-      position: absolute;
-      top: 15px;
+      @include pseudo-element (15px);
       left: 15px;
       width: 20px;
       height: 21px;
@@ -164,10 +177,8 @@
   }
 
   &__num {
-    position: absolute;
-    top: 15px;
+    @include pseudo-element (15px);
     right: 20px;
-    display: block;
     width: 16px;
     height: 16px;
     font-size: 10px;
